Added theme switcher to doc

--- a/docs/_includes/global/navbar.html
+++ b/docs/_includes/global/navbar.html
@@ -117,6 +117,12 @@
           </p>
         </div>
       </div>
+
+      <div class="navbar-item">
+        <span class="icon" data-toggle-theme="dark">
+          <i class="fas fa-lg fa-palette"></i>
+        </span>
+      </div>
     </div>
   </div>
   </div>
