--- a/docs/bulma-docs.sass
+++ b/docs/bulma-docs.sass
@@ -105,4 +105,7 @@ $pink: vAdjust("purple", $hue: hue($pink) - getRegistered("purple-h"), $saturati
 +theme("default")
 
 +theme("dark")
-  @import "bulma-dark"
+  @import "../bulma-dark"
+
+  .navbar-brand .navbar-item img
+    filter: invert(1)
