--- a/sass/components/breadcrumb.sass
+++ b/sass/components/breadcrumb.sass
@@ -7,12 +7,12 @@ $breadcrumb-item-padding-horizontal: 0.75em !default
 
 $breadcrumb-item-separator-color: v("border-hover") !default
 
-+register(breadcrumb-item-color,$breadcrumb-item-color)
-+register(breadcrumb-item-padding-vertical,$breadcrumb-item-padding-vertical)
-+register(breadcrumb-item-padding-horizontal,$breadcrumb-item-padding-horizontal)
-+register(breadcrumb-item-hover-color,$breadcrumb-item-hover-color)
-+register(breadcrumb-item-active-color,$breadcrumb-item-active-color)
-+register(breadcrumb-item-separator-color,$breadcrumb-item-separator-color)
++register(breadcrumb-item-color,$breadcrumb-item-color, true)
++register(breadcrumb-item-padding-vertical,$breadcrumb-item-padding-vertical, true)
++register(breadcrumb-item-padding-horizontal,$breadcrumb-item-padding-horizontal, true)
++register(breadcrumb-item-hover-color,$breadcrumb-item-hover-color, true)
++register(breadcrumb-item-active-color,$breadcrumb-item-active-color, true)
++register(breadcrumb-item-separator-color,$breadcrumb-item-separator-color, true)
 
 .breadcrumb
   @extend %block
