--- a/sass/components/card.sass
+++ b/sass/components/card.sass
@@ -17,20 +17,20 @@ $card-footer-padding: 0.75rem !default
 
 $card-media-margin: v("block-spacing") !default
 
-+register(card-background-color,$card-background-color)
-+register(card-shadow,$card-shadow)
-+register(card-color,$card-color)
-+register(card-header-background-color,$card-header-background-color)
-+register(card-header-shadow,$card-header-shadow)
-+register(card-header-color,$card-header-color)
-+register(card-header-weight,$card-header-weight)
-+register(card-header-padding,$card-header-padding)
-+register(card-content-background-color,$card-content-background-color)
-+register(card-content-padding,$card-content-padding)
-+register(card-footer-background-color,$card-footer-background-color)
-+register(card-footer-border-top,$card-footer-border-top)
-+register(card-footer-padding,$card-footer-padding)
-+register(card-media-margin,$card-media-margin)
++register(card-background-color,$card-background-color, true)
++register(card-shadow,$card-shadow, true)
++register(card-color,$card-color, true)
++register(card-header-background-color,$card-header-background-color, true)
++register(card-header-shadow,$card-header-shadow, true)
++register(card-header-color,$card-header-color, true)
++register(card-header-weight,$card-header-weight, true)
++register(card-header-padding,$card-header-padding, true)
++register(card-content-background-color,$card-content-background-color, true)
++register(card-content-padding,$card-content-padding, true)
++register(card-footer-background-color,$card-footer-background-color, true)
++register(card-footer-border-top,$card-footer-border-top, true)
++register(card-footer-padding,$card-footer-padding, true)
++register(card-media-margin,$card-media-margin, true)
 
 .card
   background-color: v("card-background-color")
