--- a/sass/components/dropdown.sass
+++ b/sass/components/dropdown.sass
@@ -17,20 +17,20 @@ $dropdown-item-active-background-color: v("link") !default
 
 $dropdown-divider-background-color: v("border-light") !default
 
-+register(dropdown-content-offset,$dropdown-content-offset)
-+register(dropdown-menu-min-width,$dropdown-menu-min-width)
-+register(dropdown-content-z,$dropdown-content-z)
-+register(dropdown-content-background-color,$dropdown-content-background-color)
-+register(dropdown-content-radius,$dropdown-content-radius)
-+register(dropdown-content-shadow,$dropdown-content-shadow)
-+register(dropdown-content-padding-bottom,$dropdown-content-padding-bottom)
-+register(dropdown-content-padding-top,$dropdown-content-padding-top)
-+register(dropdown-item-color,$dropdown-item-color)
-+register(dropdown-item-hover-background-color,$dropdown-item-hover-background-color)
-+register(dropdown-item-hover-color,$dropdown-item-hover-color)
-+register(dropdown-item-active-background-color,$dropdown-item-active-background-color)
-+register(dropdown-item-active-color,$dropdown-item-active-color)
-+register(dropdown-divider-background-color,$dropdown-divider-background-color)
++register(dropdown-content-offset,$dropdown-content-offset, true)
++register(dropdown-menu-min-width,$dropdown-menu-min-width, true)
++register(dropdown-content-z,$dropdown-content-z, true)
++register(dropdown-content-background-color,$dropdown-content-background-color, true)
++register(dropdown-content-radius,$dropdown-content-radius, true)
++register(dropdown-content-shadow,$dropdown-content-shadow, true)
++register(dropdown-content-padding-bottom,$dropdown-content-padding-bottom, true)
++register(dropdown-content-padding-top,$dropdown-content-padding-top, true)
++register(dropdown-item-color,$dropdown-item-color, true)
++register(dropdown-item-hover-background-color,$dropdown-item-hover-background-color, true)
++register(dropdown-item-hover-color,$dropdown-item-hover-color, true)
++register(dropdown-item-active-background-color,$dropdown-item-active-background-color, true)
++register(dropdown-item-active-color,$dropdown-item-active-color, true)
++register(dropdown-divider-background-color,$dropdown-divider-background-color, true)
 
 .dropdown
   display: inline-flex
