--- a/sass/components/level.sass
+++ b/sass/components/level.sass
@@ -1,6 +1,6 @@
 $level-item-spacing: calc(#{v(block-spacing)} / 2) !default
 
-+register(level-item-spacing, $level-item-spacing)
++register(level-item-spacing, $level-item-spacing, true)
 
 .level
   @extend %block
