--- a/sass/components/media.sass
+++ b/sass/components/media.sass
@@ -2,9 +2,9 @@ $media-border-color: vAlphaChange("border", 0.5) !default
 $media-spacing: 1rem
 $media-spacing-large: 1.5rem
 
-+register(media-border-color, $media-border-color)
-+register(media-spacing, $media-spacing)
-+register(media-spacing-large, $media-spacing-large)
++register(media-border-color, $media-border-color, true)
++register(media-spacing, $media-spacing, true)
++register(media-spacing-large, $media-spacing-large, true)
 
 .media
   align-items: flex-start
