--- a/sass/components/message.sass
+++ b/sass/components/message.sass
@@ -19,21 +19,21 @@ $message-body-pre-code-background-color: transparent !default
 $message-header-body-border-width: 0 !default
 $message-colors: $colors-list !default
 
-+register(message-background-color,$message-background-color)
-+register(message-radius,$message-radius)
-+register(message-header-background-color,$message-header-background-color)
-+register(message-header-radius,$message-header-radius)
-+register(message-header-color,$message-header-color)
-+register(message-header-weight,$message-header-weight)
-+register(message-header-padding,$message-header-padding)
-+register(message-header-body-border-width,$message-header-body-border-width)
-+register(message-body-border-color,$message-body-border-color)
-+register(message-body-radius,$message-body-radius)
-+register(message-body-border-width,$message-body-border-width)
-+register(message-body-color,$message-body-color)
-+register(message-body-padding,$message-body-padding)
-+register(message-body-pre-background-color,$message-body-pre-background-color)
-+register(message-body-pre-code-background-color,$message-body-pre-code-background-color)
++register(message-background-color,$message-background-color, true)
++register(message-radius,$message-radius, true)
++register(message-header-background-color,$message-header-background-color, true)
++register(message-header-radius,$message-header-radius, true)
++register(message-header-color,$message-header-color, true)
++register(message-header-weight,$message-header-weight, true)
++register(message-header-padding,$message-header-padding, true)
++register(message-header-body-border-width,$message-header-body-border-width, true)
++register(message-body-border-color,$message-body-border-color, true)
++register(message-body-radius,$message-body-radius, true)
++register(message-body-border-width,$message-body-border-width, true)
++register(message-body-color,$message-body-color, true)
++register(message-body-padding,$message-body-padding, true)
++register(message-body-pre-background-color,$message-body-pre-background-color, true)
++register(message-body-pre-code-background-color,$message-body-pre-code-background-color, true)
 
 .message
   @extend %block
