--- a/sass/components/modal.sass
+++ b/sass/components/modal.sass
@@ -29,27 +29,27 @@ $modal-card-body-background-color: v("scheme-main") !default
 $modal-card-body-padding: 20px !default
 
 
-+register(modal-z, $modal-z)
-+register(modal-background-background-color,$modal-background-background-color)
-+register(modal-content-margin-mobile,$modal-content-margin-mobile)
-+register(modal-content-spacing-mobile,$modal-content-spacing-mobile)
-+register(modal-content-spacing-tablet,$modal-content-spacing-tablet)
-+register(modal-content-width,$modal-content-width)
-+register(modal-close-dimensions,$modal-close-dimensions)
-+register(modal-close-right,$modal-close-right)
-+register(modal-close-top,$modal-close-top)
-+register(modal-card-spacing,$modal-card-spacing)
-+register(modal-card-head-background-color,$modal-card-head-background-color)
-+register(modal-card-head-padding,$modal-card-head-padding)
-+register(modal-card-head-border-bottom,$modal-card-head-border-bottom)
-+register(modal-card-head-radius,$modal-card-head-radius)
-+register(modal-card-title-color,$modal-card-title-color)
-+register(modal-card-title-size,$modal-card-title-size)
-+register(modal-card-title-line-height,$modal-card-title-line-height)
-+register(modal-card-foot-radius,$modal-card-foot-radius)
-+register(modal-card-foot-border-top,$modal-card-foot-border-top)
-+register(modal-card-body-background-color,$modal-card-body-background-color)
-+register(modal-card-body-padding,$modal-card-body-padding)
++register(modal-z, $modal-z, true)
++register(modal-background-background-color,$modal-background-background-color, true)
++register(modal-content-margin-mobile,$modal-content-margin-mobile, true)
++register(modal-content-spacing-mobile,$modal-content-spacing-mobile, true)
++register(modal-content-spacing-tablet,$modal-content-spacing-tablet, true)
++register(modal-content-width,$modal-content-width, true)
++register(modal-close-dimensions,$modal-close-dimensions, true)
++register(modal-close-right,$modal-close-right, true)
++register(modal-close-top,$modal-close-top, true)
++register(modal-card-spacing,$modal-card-spacing, true)
++register(modal-card-head-background-color,$modal-card-head-background-color, true)
++register(modal-card-head-padding,$modal-card-head-padding, true)
++register(modal-card-head-border-bottom,$modal-card-head-border-bottom, true)
++register(modal-card-head-radius,$modal-card-head-radius, true)
++register(modal-card-title-color,$modal-card-title-color, true)
++register(modal-card-title-size,$modal-card-title-size, true)
++register(modal-card-title-line-height,$modal-card-title-line-height, true)
++register(modal-card-foot-radius,$modal-card-foot-radius, true)
++register(modal-card-foot-border-top,$modal-card-foot-border-top, true)
++register(modal-card-body-background-color,$modal-card-body-background-color, true)
++register(modal-card-body-padding,$modal-card-body-padding, true)
 
 .modal
   @extend %overlay
