--- a/sass/components/navbar.sass
+++ b/sass/components/navbar.sass
@@ -14,7 +14,7 @@ $navbar-item-active-color: v("scheme-invert") !default
 $navbar-item-active-background-color: transparent !default
 $navbar-item-img-max-height: 1.75rem !default
 
-+register(navbar-item-color,$navbar-item-color)
++register(navbar-item-color,$navbar-item-color, true)
 
 $navbar-burger-color: v("navbar-item-color") !default
 
@@ -48,42 +48,42 @@ $navbar-bottom-box-shadow-size: 0 -2px 0 0 !default
 
 $navbar-breakpoint: $desktop !default
 
-+register(navbar-background-color,$navbar-background-color)
-+register(navbar-height,$navbar-height)
-+register(navbar-z,$navbar-z)
-+register(navbar-box-shadow-size,$navbar-box-shadow-size)
-+register(navbar-box-shadow-color,$navbar-box-shadow-color)
-+register(navbar-fixed-z,$navbar-fixed-z)
-+register(navbar-bottom-box-shadow-size,$navbar-bottom-box-shadow-size)
-+register(navbar-burger-color,$navbar-burger-color)
-+register(navbar-item-hover-background-color,$navbar-item-hover-background-color)
-+register(navbar-item-hover-color,$navbar-item-hover-color)
-+register(navbar-item-img-max-height,$navbar-item-img-max-height)
-+register(navbar-tab-hover-background-color,$navbar-tab-hover-background-color)
-+register(navbar-tab-hover-border-bottom-color,$navbar-tab-hover-border-bottom-color)
-+register(navbar-tab-active-background-color,$navbar-tab-active-background-color)
-+register(navbar-tab-active-border-bottom-color,$navbar-tab-active-border-bottom-color)
-+register(navbar-tab-active-border-bottom-style,$navbar-tab-active-border-bottom-style)
-+register(navbar-tab-active-border-bottom-width,$navbar-tab-active-border-bottom-width)
-+register(navbar-tab-active-color,$navbar-tab-active-color)
-+register(navbar-dropdown-arrow,$navbar-dropdown-arrow)
-+register(navbar-divider-background-color,$navbar-divider-background-color)
-+register(navbar-divider-height,$navbar-divider-height)
-+register(navbar-padding-vertical,$navbar-padding-vertical)
-+register(navbar-padding-horizontal,$navbar-padding-horizontal)
-+register(navbar-dropdown-item-hover-background-color,$navbar-dropdown-item-hover-background-color)
-+register(navbar-dropdown-item-hover-color,$navbar-dropdown-item-hover-color)
-+register(navbar-dropdown-item-active-background-color,$navbar-dropdown-item-active-background-color)
-+register(navbar-dropdown-item-active-color,$navbar-dropdown-item-active-color)
-+register(navbar-dropdown-border-top,$navbar-dropdown-border-top)
-+register(navbar-dropdown-radius,$navbar-dropdown-radius)
-+register(navbar-dropdown-background-color,$navbar-dropdown-background-color)
-+register(navbar-dropdown-z,$navbar-dropdown-z)
-+register(navbar-dropdown-boxed-radius,$navbar-dropdown-boxed-radius)
-+register(navbar-dropdown-boxed-shadow,$navbar-dropdown-boxed-shadow)
-+register(navbar-dropdown-offset,$navbar-dropdown-offset)
-+register(navbar-item-active-color,$navbar-item-active-color)
-+register(navbar-item-active-background-color,$navbar-item-active-background-color)
++register(navbar-background-color,$navbar-background-color, true)
++register(navbar-height,$navbar-height, true)
++register(navbar-z,$navbar-z, true)
++register(navbar-box-shadow-size,$navbar-box-shadow-size, true)
++register(navbar-box-shadow-color,$navbar-box-shadow-color, true)
++register(navbar-fixed-z,$navbar-fixed-z, true)
++register(navbar-bottom-box-shadow-size,$navbar-bottom-box-shadow-size, true)
++register(navbar-burger-color,$navbar-burger-color, true)
++register(navbar-item-hover-background-color,$navbar-item-hover-background-color, true)
++register(navbar-item-hover-color,$navbar-item-hover-color, true)
++register(navbar-item-img-max-height,$navbar-item-img-max-height, true)
++register(navbar-tab-hover-background-color,$navbar-tab-hover-background-color, true)
++register(navbar-tab-hover-border-bottom-color,$navbar-tab-hover-border-bottom-color, true)
++register(navbar-tab-active-background-color,$navbar-tab-active-background-color, true)
++register(navbar-tab-active-border-bottom-color,$navbar-tab-active-border-bottom-color, true)
++register(navbar-tab-active-border-bottom-style,$navbar-tab-active-border-bottom-style, true)
++register(navbar-tab-active-border-bottom-width,$navbar-tab-active-border-bottom-width, true)
++register(navbar-tab-active-color,$navbar-tab-active-color, true)
++register(navbar-dropdown-arrow,$navbar-dropdown-arrow, true)
++register(navbar-divider-background-color,$navbar-divider-background-color, true)
++register(navbar-divider-height,$navbar-divider-height, true)
++register(navbar-padding-vertical,$navbar-padding-vertical, true)
++register(navbar-padding-horizontal,$navbar-padding-horizontal, true)
++register(navbar-dropdown-item-hover-background-color,$navbar-dropdown-item-hover-background-color, true)
++register(navbar-dropdown-item-hover-color,$navbar-dropdown-item-hover-color, true)
++register(navbar-dropdown-item-active-background-color,$navbar-dropdown-item-active-background-color, true)
++register(navbar-dropdown-item-active-color,$navbar-dropdown-item-active-color, true)
++register(navbar-dropdown-border-top,$navbar-dropdown-border-top, true)
++register(navbar-dropdown-radius,$navbar-dropdown-radius, true)
++register(navbar-dropdown-background-color,$navbar-dropdown-background-color, true)
++register(navbar-dropdown-z,$navbar-dropdown-z, true)
++register(navbar-dropdown-boxed-radius,$navbar-dropdown-boxed-radius, true)
++register(navbar-dropdown-boxed-shadow,$navbar-dropdown-boxed-shadow, true)
++register(navbar-dropdown-offset,$navbar-dropdown-offset, true)
++register(navbar-item-active-color,$navbar-item-active-color, true)
++register(navbar-item-active-background-color,$navbar-item-active-background-color, true)
 
 =navbar-fixed
   left: 0
