--- a/sass/components/panel.sass
+++ b/sass/components/panel.sass
@@ -28,28 +28,28 @@ $panel-block-active-icon-color: v("link") !default
 $panel-icon-color: v("text-light") !default
 $panel-colors: $colors-list !default
 
-+register(panel-radius,$panel-radius)
-+register(panel-shadow,$panel-shadow)
-+register(panel-margin,$panel-margin)
-+register(panel-item-border,$panel-item-border)
-+register(panel-heading-background-color,$panel-heading-background-color)
-+register(panel-heading-color,$panel-heading-color)
-+register(panel-heading-size,$panel-heading-size)
-+register(panel-heading-weight,$panel-heading-weight)
-+register(panel-heading-line-height,$panel-heading-line-height)
-+register(panel-heading-padding,$panel-heading-padding)
-+register(panel-tabs-font-size,$panel-tabs-font-size)
-+register(panel-tab-border-bottom,$panel-tab-border-bottom)
-+register(panel-tab-active-border-bottom-color,$panel-tab-active-border-bottom-color)
-+register(panel-tab-active-color,$panel-tab-active-color)
-+register(panel-list-item-color,$panel-list-item-color)
-+register(panel-list-item-hover-color,$panel-list-item-hover-color)
-+register(panel-block-color,$panel-block-color)
-+register(panel-block-active-border-left-color,$panel-block-active-border-left-color)
-+register(panel-block-active-color,$panel-block-active-color)
-+register(panel-block-active-icon-color,$panel-block-active-icon-color)
-+register(panel-block-hover-background-color,$panel-block-hover-background-color)
-+register(panel-icon-color,$panel-icon-color)
++register(panel-radius,$panel-radius, true)
++register(panel-shadow,$panel-shadow, true)
++register(panel-margin,$panel-margin, true)
++register(panel-item-border,$panel-item-border, true)
++register(panel-heading-background-color,$panel-heading-background-color, true)
++register(panel-heading-color,$panel-heading-color, true)
++register(panel-heading-size,$panel-heading-size, true)
++register(panel-heading-weight,$panel-heading-weight, true)
++register(panel-heading-line-height,$panel-heading-line-height, true)
++register(panel-heading-padding,$panel-heading-padding, true)
++register(panel-tabs-font-size,$panel-tabs-font-size, true)
++register(panel-tab-border-bottom,$panel-tab-border-bottom, true)
++register(panel-tab-active-border-bottom-color,$panel-tab-active-border-bottom-color, true)
++register(panel-tab-active-color,$panel-tab-active-color, true)
++register(panel-list-item-color,$panel-list-item-color, true)
++register(panel-list-item-hover-color,$panel-list-item-hover-color, true)
++register(panel-block-color,$panel-block-color, true)
++register(panel-block-active-border-left-color,$panel-block-active-border-left-color, true)
++register(panel-block-active-color,$panel-block-active-color, true)
++register(panel-block-active-icon-color,$panel-block-active-icon-color, true)
++register(panel-block-hover-background-color,$panel-block-hover-background-color, true)
++register(panel-icon-color,$panel-icon-color, true)
 
 .panel
   border-radius: v("panel-radius")
