--- a/sass/components/tabs.sass
+++ b/sass/components/tabs.sass
@@ -26,30 +26,30 @@ $tabs-toggle-link-active-background-color: v("link") !default
 $tabs-toggle-link-active-border-color: v("link") !default
 $tabs-toggle-link-active-color: v("link-invert") !default
 
-+register(tabs-border-bottom-color,$tabs-border-bottom-color)
-+register(tabs-border-bottom-style,$tabs-border-bottom-style)
-+register(tabs-border-bottom-width,$tabs-border-bottom-width)
-+register(tabs-link-color,$tabs-link-color)
-+register(tabs-link-padding,$tabs-link-padding)
-+register(tabs-link-hover-border-bottom-color,$tabs-link-hover-border-bottom-color)
-+register(tabs-link-hover-color,$tabs-link-hover-color)
-+register(tabs-link-active-border-bottom-color,$tabs-link-active-border-bottom-color)
-+register(tabs-link-active-color,$tabs-link-active-color)
-+register(tabs-boxed-link-radius,$tabs-boxed-link-radius)
-+register(tabs-boxed-link-hover-background-color,$tabs-boxed-link-hover-background-color)
-+register(tabs-boxed-link-hover-border-bottom-color,$tabs-boxed-link-hover-border-bottom-color)
-+register(tabs-boxed-link-active-background-color,$tabs-boxed-link-active-background-color)
-+register(tabs-boxed-link-active-border-color,$tabs-boxed-link-active-border-color)
-+register(tabs-boxed-link-active-border-bottom-color,$tabs-boxed-link-active-border-bottom-color)
-+register(tabs-toggle-link-border-color,$tabs-toggle-link-border-color)
-+register(tabs-toggle-link-border-style,$tabs-toggle-link-border-style)
-+register(tabs-toggle-link-border-width,$tabs-toggle-link-border-width)
-+register(tabs-toggle-link-hover-background-color,$tabs-toggle-link-hover-background-color)
-+register(tabs-toggle-link-hover-border-color,$tabs-toggle-link-hover-border-color)
-+register(tabs-toggle-link-radius,$tabs-toggle-link-radius)
-+register(tabs-toggle-link-active-background-color,$tabs-toggle-link-active-background-color)
-+register(tabs-toggle-link-active-border-color,$tabs-toggle-link-active-border-color)
-+register(tabs-toggle-link-active-color,$tabs-toggle-link-active-color)
++register(tabs-border-bottom-color,$tabs-border-bottom-color, true)
++register(tabs-border-bottom-style,$tabs-border-bottom-style, true)
++register(tabs-border-bottom-width,$tabs-border-bottom-width, true)
++register(tabs-link-color,$tabs-link-color, true)
++register(tabs-link-padding,$tabs-link-padding, true)
++register(tabs-link-hover-border-bottom-color,$tabs-link-hover-border-bottom-color, true)
++register(tabs-link-hover-color,$tabs-link-hover-color, true)
++register(tabs-link-active-border-bottom-color,$tabs-link-active-border-bottom-color, true)
++register(tabs-link-active-color,$tabs-link-active-color, true)
++register(tabs-boxed-link-radius,$tabs-boxed-link-radius, true)
++register(tabs-boxed-link-hover-background-color,$tabs-boxed-link-hover-background-color, true)
++register(tabs-boxed-link-hover-border-bottom-color,$tabs-boxed-link-hover-border-bottom-color, true)
++register(tabs-boxed-link-active-background-color,$tabs-boxed-link-active-background-color, true)
++register(tabs-boxed-link-active-border-color,$tabs-boxed-link-active-border-color, true)
++register(tabs-boxed-link-active-border-bottom-color,$tabs-boxed-link-active-border-bottom-color, true)
++register(tabs-toggle-link-border-color,$tabs-toggle-link-border-color, true)
++register(tabs-toggle-link-border-style,$tabs-toggle-link-border-style, true)
++register(tabs-toggle-link-border-width,$tabs-toggle-link-border-width, true)
++register(tabs-toggle-link-hover-background-color,$tabs-toggle-link-hover-background-color, true)
++register(tabs-toggle-link-hover-border-color,$tabs-toggle-link-hover-border-color, true)
++register(tabs-toggle-link-radius,$tabs-toggle-link-radius, true)
++register(tabs-toggle-link-active-background-color,$tabs-toggle-link-active-background-color, true)
++register(tabs-toggle-link-active-border-color,$tabs-toggle-link-active-border-color, true)
++register(tabs-toggle-link-active-color,$tabs-toggle-link-active-color, true)
 
 .tabs
   @extend %block
