--- a/sass/elements/button.sass
+++ b/sass/elements/button.sass
@@ -5,7 +5,7 @@ $button-family: inherit !default
 $button-border-color: v("border") !default
 $button-border-width: v("control-border-width") !default
 
-+register(button-border-width, $button-border-width)
++register(button-border-width, $button-border-width, true)
 
 $button-padding-vertical: calc(0.5em - #{v("button-border-width")}) !default
 $button-padding-horizontal: 1em !default
@@ -35,31 +35,31 @@ $button-static-color: v("text-light") !default
 $button-static-background-color: v("scheme-main-ter") !default
 $button-static-border-color: v("border") !default
 
-+register(button-background-color, $button-background-color)
-+register(button-border-color, $button-border-color)
-+register(button-color, $button-color)
-+register(button-padding-vertical, $button-padding-vertical)
-+register(button-padding-horizontal, $button-padding-horizontal)
-+register(button-hover-border-color, $button-hover-border-color)
-+register(button-hover-color, $button-hover-color)
-+register(button-focus-border-color, $button-focus-border-color)
-+register(button-focus-color, $button-focus-color)
-+register(button-focus-box-shadow-size, $button-focus-box-shadow-size)
-+register(button-focus-box-shadow-color, $button-focus-box-shadow-color)
-+register(button-active-border-color, $button-active-border-color)
-+register(button-active-color, $button-active-color)
-+register(button-text-color, $button-text-color)
-+register(button-text-decoration, $button-text-decoration)
-+register(button-text-hover-background-color, $button-text-hover-background-color)
-+register(button-text-hover-color, $button-text-hover-color)
-+register(button-disabled-background-color, $button-disabled-background-color)
-+register(button-disabled-border-color, $button-disabled-border-color)
-+register(button-disabled-shadow, $button-disabled-shadow)
-+register(button-disabled-opacity, $button-disabled-opacity)
-+register(button-static-background-color, $button-static-background-color)
-+register(button-static-border-color, $button-static-border-color)
-+register(button-static-color, $button-static-color)
-+register(button-family, $button-family)
++register(button-background-color, $button-background-color, true)
++register(button-border-color, $button-border-color, true)
++register(button-color, $button-color, true)
++register(button-padding-vertical, $button-padding-vertical, true)
++register(button-padding-horizontal, $button-padding-horizontal, true)
++register(button-hover-border-color, $button-hover-border-color, true)
++register(button-hover-color, $button-hover-color, true)
++register(button-focus-border-color, $button-focus-border-color, true)
++register(button-focus-color, $button-focus-color, true)
++register(button-focus-box-shadow-size, $button-focus-box-shadow-size, true)
++register(button-focus-box-shadow-color, $button-focus-box-shadow-color, true)
++register(button-active-border-color, $button-active-border-color, true)
++register(button-active-color, $button-active-color, true)
++register(button-text-color, $button-text-color, true)
++register(button-text-decoration, $button-text-decoration, true)
++register(button-text-hover-background-color, $button-text-hover-background-color, true)
++register(button-text-hover-color, $button-text-hover-color, true)
++register(button-disabled-background-color, $button-disabled-background-color, true)
++register(button-disabled-border-color, $button-disabled-border-color, true)
++register(button-disabled-shadow, $button-disabled-shadow, true)
++register(button-disabled-opacity, $button-disabled-opacity, true)
++register(button-static-background-color, $button-static-background-color, true)
++register(button-static-border-color, $button-static-border-color, true)
++register(button-static-color, $button-static-color, true)
++register(button-family, $button-family, true)
 
 // The button sizes use mixins so they can be used at different breakpoints
 =button-small
