--- a/sass/elements/content.sass
+++ b/sass/elements/content.sass
@@ -17,21 +17,21 @@ $content-table-head-cell-color: v("text-strong") !default
 $content-table-foot-cell-border-width: 2px 0 0 !default
 $content-table-foot-cell-color: v("text-strong") !default
 
-+register(content-heading-color,$content-heading-color)
-+register(content-heading-weight,$content-heading-weight)
-+register(content-heading-line-height,$content-heading-line-height)
-+register(content-blockquote-background-color,$content-blockquote-background-color)
-+register(content-blockquote-border-left,$content-blockquote-border-left)
-+register(content-blockquote-padding,$content-blockquote-padding)
-+register(content-pre-padding,$content-pre-padding)
-+register(content-table-cell-border,$content-table-cell-border)
-+register(content-table-cell-border-width,$content-table-cell-border-width)
-+register(content-table-cell-padding,$content-table-cell-padding)
-+register(content-table-cell-heading-color,$content-table-cell-heading-color)
-+register(content-table-head-cell-border-width,$content-table-head-cell-border-width)
-+register(content-table-head-cell-color,$content-table-head-cell-color)
-+register(content-table-foot-cell-border-width,$content-table-foot-cell-border-width)
-+register(content-table-foot-cell-color,$content-table-foot-cell-color)
++register(content-heading-color,$content-heading-color, true)
++register(content-heading-weight,$content-heading-weight, true)
++register(content-heading-line-height,$content-heading-line-height, true)
++register(content-blockquote-background-color,$content-blockquote-background-color, true)
++register(content-blockquote-border-left,$content-blockquote-border-left, true)
++register(content-blockquote-padding,$content-blockquote-padding, true)
++register(content-pre-padding,$content-pre-padding, true)
++register(content-table-cell-border,$content-table-cell-border, true)
++register(content-table-cell-border-width,$content-table-cell-border-width, true)
++register(content-table-cell-padding,$content-table-cell-padding, true)
++register(content-table-cell-heading-color,$content-table-cell-heading-color, true)
++register(content-table-head-cell-border-width,$content-table-head-cell-border-width, true)
++register(content-table-head-cell-color,$content-table-head-cell-color, true)
++register(content-table-foot-cell-border-width,$content-table-foot-cell-border-width, true)
++register(content-table-foot-cell-color,$content-table-foot-cell-color, true)
 
 .content
   @extend %block
