--- a/sass/elements/icon.sass
+++ b/sass/elements/icon.sass
@@ -3,10 +3,10 @@ $icon-dimensions-small: 1rem !default
 $icon-dimensions-medium: 2rem !default
 $icon-dimensions-large: 3rem !default
 
-+register(icon-dimensions, $icon-dimensions)
-+register(icon-dimensions-small, $icon-dimensions-small)
-+register(icon-dimensions-medium, $icon-dimensions-medium)
-+register(icon-dimensions-large, $icon-dimensions-large)
++register(icon-dimensions, $icon-dimensions, true)
++register(icon-dimensions-small, $icon-dimensions-small, true)
++register(icon-dimensions-medium, $icon-dimensions-medium, true)
++register(icon-dimensions-large, $icon-dimensions-large, true)
 
 .icon
   align-items: center
