--- a/sass/elements/notification.sass
+++ b/sass/elements/notification.sass
@@ -6,13 +6,13 @@ $notification-padding-right: 2.5rem !default
 $notification-padding-left: 1.5rem !default
 $notification-padding: $notification-padding-vertical $notification-padding-right $notification-padding-vertical $notification-padding-left !default
 
-+register(notification-background-color, $notification-background-color)
-+register(notification-radius, $notification-radius)
-+register(notification-padding-vertical, $notification-padding-vertical)
-+register(notification-padding-right, $notification-padding-right)
-+register(notification-padding-left, $notification-padding-left)
-+register(notification-padding, $notification-padding)
-+register(notification-code-background-color, $notification-code-background-color)
++register(notification-background-color, $notification-background-color, true)
++register(notification-radius, $notification-radius, true)
++register(notification-padding-vertical, $notification-padding-vertical, true)
++register(notification-padding-right, $notification-padding-right, true)
++register(notification-padding-left, $notification-padding-left, true)
++register(notification-padding, $notification-padding, true)
++register(notification-code-background-color, $notification-code-background-color, true)
 
 .notification
   @extend %block
