--- a/sass/elements/progress.sass
+++ b/sass/elements/progress.sass
@@ -4,10 +4,10 @@ $progress-border-radius: v("radius-rounded") !default
 
 $progress-indeterminate-duration: 1.5s !default
 
-+register(progress-border-radius,$progress-border-radius)
-+register(progress-bar-background-color,$progress-bar-background-color)
-+register(progress-value-background-color,$progress-value-background-color)
-+register(progress-indeterminate-duration,$progress-indeterminate-duration)
++register(progress-border-radius,$progress-border-radius, true)
++register(progress-bar-background-color,$progress-bar-background-color, true)
++register(progress-value-background-color,$progress-value-background-color, true)
++register(progress-indeterminate-duration,$progress-indeterminate-duration, true)
 
 .progress
   @extend %block
