--- a/sass/elements/table.sass
+++ b/sass/elements/table.sass
@@ -23,24 +23,24 @@ $table-row-active-color: v("primary-invert") !default
 $table-striped-row-even-background-color: v("scheme-main-bis") !default
 $table-striped-row-even-hover-background-color: v("scheme-main-ter") !default
 
-+register(table-background-color,$table-background-color)
-+register(table-color,$table-color)
-+register(table-cell-border,$table-cell-border)
-+register(table-cell-border-width,$table-cell-border-width)
-+register(table-cell-padding,$table-cell-padding)
-+register(table-row-active-background-color,$table-row-active-background-color)
-+register(table-row-active-color,$table-row-active-color)
-+register(table-cell-heading-color,$table-cell-heading-color)
-+register(table-head-background-color,$table-head-background-color)
-+register(table-head-cell-border-width,$table-head-cell-border-width)
-+register(table-head-cell-color,$table-head-cell-color)
-+register(table-foot-background-color,$table-foot-background-color)
-+register(table-foot-cell-border-width,$table-foot-cell-border-width)
-+register(table-foot-cell-color,$table-foot-cell-color)
-+register(table-body-background-color,$table-body-background-color)
-+register(table-row-hover-background-color,$table-row-hover-background-color)
-+register(table-striped-row-even-hover-background-color,$table-striped-row-even-hover-background-color)
-+register(table-striped-row-even-background-color,$table-striped-row-even-background-color)
++register(table-background-color,$table-background-color, true)
++register(table-color,$table-color, true)
++register(table-cell-border,$table-cell-border, true)
++register(table-cell-border-width,$table-cell-border-width, true)
++register(table-cell-padding,$table-cell-padding, true)
++register(table-row-active-background-color,$table-row-active-background-color, true)
++register(table-row-active-color,$table-row-active-color, true)
++register(table-cell-heading-color,$table-cell-heading-color, true)
++register(table-head-background-color,$table-head-background-color, true)
++register(table-head-cell-border-width,$table-head-cell-border-width, true)
++register(table-head-cell-color,$table-head-cell-color, true)
++register(table-foot-background-color,$table-foot-background-color, true)
++register(table-foot-cell-border-width,$table-foot-cell-border-width, true)
++register(table-foot-cell-color,$table-foot-cell-color, true)
++register(table-body-background-color,$table-body-background-color, true)
++register(table-row-hover-background-color,$table-row-hover-background-color, true)
++register(table-striped-row-even-hover-background-color,$table-striped-row-even-hover-background-color, true)
++register(table-striped-row-even-background-color,$table-striped-row-even-background-color, true)
 
 .table
   @extend %block
