--- a/sass/elements/tag.sass
+++ b/sass/elements/tag.sass
@@ -3,10 +3,10 @@ $tag-color: v("text") !default
 $tag-radius: v("radius") !default
 $tag-delete-margin: 1px !default
 
-+register(tag-background-color,$tag-background-color)
-+register(tag-radius,$tag-radius)
-+register(tag-color,$tag-color)
-+register(tag-delete-margin,$tag-delete-margin)
++register(tag-background-color,$tag-background-color, true)
++register(tag-radius,$tag-radius, true)
++register(tag-color,$tag-color, true)
++register(tag-delete-margin,$tag-delete-margin, true)
 
 .tags
   align-items: center
