--- a/sass/elements/title.sass
+++ b/sass/elements/title.sass
@@ -17,25 +17,25 @@ $subtitle-strong-color: v("text-strong") !default
 $subtitle-strong-weight: v("weight-semibold") !default
 $subtitle-negative-margin: -1.25rem !default
 
-+register(title-sub-size,$title-sub-size)
-+register(title-sup-size,$title-sup-size)
-+register(title-color,$title-color)
-+register(title-size,$title-size)
-+register(title-weight,$title-weight)
-+register(title-line-height,$title-line-height)
-+register(title-strong-color,$title-strong-color)
-+register(title-strong-weight,$title-strong-weight)
-+register(title-family,$title-family)
-+register(subtitle-family,$subtitle-family)
++register(title-sub-size,$title-sub-size, true)
++register(title-sup-size,$title-sup-size, true)
++register(title-color,$title-color, true)
++register(title-size,$title-size, true)
++register(title-weight,$title-weight, true)
++register(title-line-height,$title-line-height, true)
++register(title-strong-color,$title-strong-color, true)
++register(title-strong-weight,$title-strong-weight, true)
++register(title-family,$title-family, true)
++register(subtitle-family,$subtitle-family, true)
 
 
-+register(subtitle-negative-margin,$subtitle-negative-margin)
-+register(subtitle-color,$subtitle-color)
-+register(subtitle-size,$subtitle-size)
-+register(subtitle-weight,$subtitle-weight)
-+register(subtitle-line-height,$subtitle-line-height)
-+register(subtitle-strong-color,$subtitle-strong-color)
-+register(subtitle-strong-weight,$subtitle-strong-weight)
++register(subtitle-negative-margin,$subtitle-negative-margin, true)
++register(subtitle-color,$subtitle-color, true)
++register(subtitle-size,$subtitle-size, true)
++register(subtitle-weight,$subtitle-weight, true)
++register(subtitle-line-height,$subtitle-line-height, true)
++register(subtitle-strong-color,$subtitle-strong-color, true)
++register(subtitle-strong-weight,$subtitle-strong-weight, true)
 
 .title,
 .subtitle
