--- a/sass/form/file.sass
+++ b/sass/form/file.sass
@@ -11,16 +11,16 @@ $file-name-border-style: solid !default
 $file-name-border-width: 1px 1px 1px 0 !default
 $file-name-max-width: 16em !default
 
-+register(file-radius,$file-radius)
-+register(file-cta-background-color,$file-cta-background-color)
-+register(file-cta-hover-color,$file-cta-hover-color)
-+register(file-name-border-color,$file-name-border-color)
-+register(file-cta-active-color,$file-cta-active-color)
-+register(file-border-color,$file-border-color)
-+register(file-cta-color,$file-cta-color)
-+register(file-name-border-style,$file-name-border-style)
-+register(file-name-border-width,$file-name-border-width)
-+register(file-name-max-width,$file-name-max-width)
++register(file-radius,$file-radius, true)
++register(file-cta-background-color,$file-cta-background-color, true)
++register(file-cta-hover-color,$file-cta-hover-color, true)
++register(file-name-border-color,$file-name-border-color, true)
++register(file-cta-active-color,$file-cta-active-color, true)
++register(file-border-color,$file-border-color, true)
++register(file-cta-color,$file-cta-color, true)
++register(file-name-border-style,$file-name-border-style, true)
++register(file-name-border-width,$file-name-border-width, true)
++register(file-name-max-width,$file-name-max-width, true)
 
 .file
   @extend %unselectable
