--- a/sass/form/input-textarea.sass
+++ b/sass/form/input-textarea.sass
@@ -2,9 +2,9 @@ $textarea-padding: v("control-padding-horizontal") !default
 $textarea-max-height: 40em !default
 $textarea-min-height: 8em !default
 
-+register(textarea-padding,$textarea-padding)
-+register(textarea-max-height,$textarea-max-height)
-+register(textarea-min-height,$textarea-min-height)
++register(textarea-padding,$textarea-padding, true)
++register(textarea-max-height,$textarea-max-height, true)
++register(textarea-min-height,$textarea-min-height, true)
 
 %input-textarea
   @extend %input
