--- a/sass/form/shared.sass
+++ b/sass/form/shared.sass
@@ -1,6 +1,6 @@
 $input-color: v("text-strong") !default
 
-+register(input-color,$input-color)
++register(input-color,$input-color, true)
 
 $input-background-color: v("scheme-main") !default
 $input-border-color: v("border") !default
@@ -20,7 +20,7 @@ $input-disabled-color: v("text-light") !default
 $input-disabled-background-color: v("background") !default
 $input-disabled-border-color: v("background") !default
 
-+register("input-disabled-color", $input-disabled-color)
++register("input-disabled-color", $input-disabled-color, true)
 
 $input-disabled-placeholder-color: vAlphaChange("input-disabled-color", 0.3) !default
 
@@ -31,23 +31,23 @@ $input-icon-active-color: v("text") !default
 
 $input-radius: v("radius") !default
 
-+register(input-background-color,$input-background-color)
-+register(input-border-color,$input-border-color)
-+register(input-radius,$input-radius)
-+register(input-placeholder-color,$input-placeholder-color)
-+register(input-hover-border-color,$input-hover-border-color)
-+register(input-focus-border-color,$input-focus-border-color)
-+register(input-focus-box-shadow-size,$input-focus-box-shadow-size)
-+register(input-focus-box-shadow-color,$input-focus-box-shadow-color)
-+register(input-disabled-background-color,$input-disabled-background-color)
-+register(input-disabled-border-color,$input-disabled-border-color)
-+register(input-disabled-placeholder-color,$input-disabled-placeholder-color)
-+register(input-shadow,$input-shadow)
-+register(input-hover-color,$input-hover-color)
-+register(input-height,$input-height)
-+register(input-arrow,$input-arrow)
-+register(input-icon-active-color, $input-icon-active-color)
-+register(input-icon-color, $input-icon-color)
++register(input-background-color,$input-background-color, true)
++register(input-border-color,$input-border-color, true)
++register(input-radius,$input-radius, true)
++register(input-placeholder-color,$input-placeholder-color, true)
++register(input-hover-border-color,$input-hover-border-color, true)
++register(input-focus-border-color,$input-focus-border-color, true)
++register(input-focus-box-shadow-size,$input-focus-box-shadow-size, true)
++register(input-focus-box-shadow-color,$input-focus-box-shadow-color, true)
++register(input-disabled-background-color,$input-disabled-background-color, true)
++register(input-disabled-border-color,$input-disabled-border-color, true)
++register(input-disabled-placeholder-color,$input-disabled-placeholder-color, true)
++register(input-shadow,$input-shadow, true)
++register(input-hover-color,$input-hover-color, true)
++register(input-height,$input-height, true)
++register(input-arrow,$input-arrow, true)
++register(input-icon-active-color, $input-icon-active-color, true)
++register(input-icon-color, $input-icon-color, true)
 
 =input
   @extend %control
