--- a/sass/form/tools.sass
+++ b/sass/form/tools.sass
@@ -3,9 +3,9 @@ $label-weight: v("weight-bold") !default
 
 $help-size: v("size-small") !default
 
-+register(label-color, $label-color)
-+register(label-weight, $label-weight)
-+register(help-size, $help-size)
++register(label-color, $label-color, true)
++register(label-weight, $label-weight, true)
++register(help-size, $help-size, true)
 
 .label
   color: v("label-color")
