--- a/sass/grid/columns.sass
+++ b/sass/grid/columns.sass
@@ -1,6 +1,6 @@
 $column-gap: 0.75rem !default
 
-+register(column-gap, $column-gap)
++register(column-gap, $column-gap, true)
 
 .column
   display: block
