--- a/sass/grid/tiles.sass
+++ b/sass/grid/tiles.sass
@@ -1,6 +1,6 @@
 $tile-spacing: 0.75rem !default
 
-+register(tile-spacing, $tile-spacing)
++register(tile-spacing, $tile-spacing, true)
 
 .tile
   align-items: stretch
