--- a/sass/layout/footer.sass
+++ b/sass/layout/footer.sass
@@ -2,9 +2,9 @@ $footer-background-color: v("scheme-main-bis") !default
 $footer-color: inherit !default
 $footer-padding: 3rem 1.5rem 6rem !default
 
-+register(footer-background-color,$footer-background-color)
-+register(footer-padding,$footer-padding)
-+register(footer-color,$footer-color)
++register(footer-background-color,$footer-background-color, true)
++register(footer-padding,$footer-padding, true)
++register(footer-color,$footer-color, true)
 
 .footer
   background-color: v("footer-background-color")
