--- a/sass/layout/hero.sass
+++ b/sass/layout/hero.sass
@@ -3,10 +3,10 @@ $hero-body-padding-small: 1.5rem !default
 $hero-body-padding-medium: 9rem 1.5rem !default
 $hero-body-padding-large: 18rem 1.5rem !default
 
-+register(hero-body-padding-small,$hero-body-padding-small)
-+register(hero-body-padding-medium,$hero-body-padding-medium)
-+register(hero-body-padding-large,$hero-body-padding-large)
-+register(hero-body-padding,$hero-body-padding)
++register(hero-body-padding-small,$hero-body-padding-small, true)
++register(hero-body-padding-medium,$hero-body-padding-medium, true)
++register(hero-body-padding-large,$hero-body-padding-large, true)
++register(hero-body-padding,$hero-body-padding, true)
 
 // Main container
 .hero
