--- a/sass/layout/section.sass
+++ b/sass/layout/section.sass
@@ -2,9 +2,9 @@ $section-padding: 3rem 1.5rem !default
 $section-padding-medium: 9rem 1.5rem !default
 $section-padding-large: 18rem 1.5rem !default
 
-+register(section-padding,$section-padding)
-+register(section-padding-medium,$section-padding-medium)
-+register(section-padding-large,$section-padding-large)
++register(section-padding,$section-padding, true)
++register(section-padding-medium,$section-padding-medium, true)
++register(section-padding-large,$section-padding-large, true)
 
 .section
   padding: v("section-padding")
