--- a/sass/utilities/controls.sass
+++ b/sass/utilities/controls.sass
@@ -3,7 +3,7 @@ $control-radius-small: v("radius-small") !default
 
 $control-border-width: 1px !default
 
-+register(control-border-width,$control-border-width)
++register(control-border-width,$control-border-width, true)
 
 $control-height: 2.5em !default
 $control-line-height: 1.5 !default
@@ -11,12 +11,12 @@ $control-line-height: 1.5 !default
 $control-padding-vertical: calc(0.5em - #{v("control-border-width")}) !default
 $control-padding-horizontal: calc(0.75em - #{v("control-border-width")}) !default
 
-+register(control-radius,$control-radius)
-+register(control-radius-small,$control-radius-small)
-+register(control-height,$control-height)
-+register(control-line-height,$control-line-height)
-+register(control-padding-vertical,$control-padding-vertical)
-+register(control-padding-horizontal,$control-padding-horizontal)
++register(control-radius,$control-radius, true)
++register(control-radius-small,$control-radius-small, true)
++register(control-height,$control-height, true)
++register(control-line-height,$control-line-height, true)
++register(control-padding-vertical,$control-padding-vertical, true)
++register(control-padding-horizontal,$control-padding-horizontal, true)
 
 =control
   -moz-appearance: none
