--- a/sass/utilities/initial-variables.sass
+++ b/sass/utilities/initial-variables.sass
@@ -11,9 +11,9 @@ $black: hsl(0, 0%, 4%) !default
 $black-bis: hsl(0, 0%, 7%) !default
 $black-ter: hsl(0, 0%, 14%) !default
 
-+register("black", $black)
-+register("black-bis", $black-bis)
-+register("black-ter", $black-ter)
++register("black", $black, true)
++register("black-bis", $black-bis, true)
++register("black-ter", $black-ter, true)
 
 $grey-darker: hsl(0, 0%, 21%) !default
 $grey-dark: hsl(0, 0%, 29%) !default
@@ -22,20 +22,20 @@ $grey-light: hsl(0, 0%, 71%) !default
 $grey-lighter: hsl(0, 0%, 86%) !default
 $grey-lightest: hsl(0, 0%, 93%) !default
 
-+register("grey-lighter", $grey-lighter)
-+register("grey-light", $grey-light)
-+register("grey-lightest", $grey-lightest)
-+register("grey-dark", $grey-dark)
-+register("grey", $grey)
-+register("grey-darker", $grey-darker)
++register("grey-lighter", $grey-lighter, true)
++register("grey-light", $grey-light, true)
++register("grey-lightest", $grey-lightest, true)
++register("grey-dark", $grey-dark, true)
++register("grey", $grey, true)
++register("grey-darker", $grey-darker, true)
 
 $white-ter: hsl(0, 0%, 96%) !default
 $white-bis: hsl(0, 0%, 98%) !default
 $white: hsl(0, 0%, 100%) !default
 
-+register("white-ter", $white-ter)
-+register("white", $white)
-+register("white-bis", $white-bis)
++register("white-ter", $white-ter, true)
++register("white", $white, true)
++register("white-bis", $white-bis, true)
 
 $orange: hsl(14, 100%, 53%) !default
 $yellow: hsl(48, 100%, 67%) !default
@@ -46,14 +46,14 @@ $blue: hsl(217, 71%, 53%) !default
 $purple: hsl(271, 100%, 71%) !default
 $red: hsl(348, 86%, 61%) !default
 
-+register("orange", $orange)
-+register("yellow", $yellow)
-+register("green", $green)
-+register("turquoise", $turquoise)
-+register("cyan", $cyan)
-+register("blue", $blue)
-+register("purple", $purple)
-+register("red", $red)
++register("orange", $orange, true)
++register("yellow", $yellow, true)
++register("green", $green, true)
++register("turquoise", $turquoise, true)
++register("cyan", $cyan, true)
++register("blue", $blue, true)
++register("purple", $purple, true)
++register("red", $red, true)
 
 // Typography
 
@@ -61,9 +61,9 @@ $family-sans-serif: BlinkMacSystemFont, -apple-system, "Segoe UI", "Roboto", "Ox
 $family-monospace: monospace !default
 $render-mode: optimizeLegibility !default
 
-+register(family-sans-serif, $family-sans-serif)
-+register(family-monospace, $family-monospace)
-+register(render-mode, $render-mode)
++register(family-sans-serif, $family-sans-serif, true)
++register(family-monospace, $family-monospace, true)
++register(render-mode, $render-mode, true)
 
 $size-1: 3rem !default
 $size-2: 2.5rem !default
@@ -73,13 +73,13 @@ $size-5: 1.25rem !default
 $size-6: 1rem !default
 $size-7: 0.75rem !default
 
-+register(size-1, $size-1)
-+register(size-2, $size-2)
-+register(size-3, $size-3)
-+register(size-4, $size-4)
-+register(size-5, $size-5)
-+register(size-6, $size-6)
-+register(size-7, $size-7)
++register(size-1, $size-1, true)
++register(size-2, $size-2, true)
++register(size-3, $size-3, true)
++register(size-4, $size-4, true)
++register(size-5, $size-5, true)
++register(size-6, $size-6, true)
++register(size-7, $size-7, true)
 
 
 $weight-light: 300 !default
@@ -88,17 +88,17 @@ $weight-medium: 500 !default
 $weight-semibold: 600 !default
 $weight-bold: 700 !default
 
-+register(weight-light, $weight-light)
-+register(weight-normal, $weight-normal)
-+register(weight-medium, $weight-medium)
-+register(weight-semibold, $weight-semibold)
-+register(weight-bold, $weight-bold)
++register(weight-light, $weight-light, true)
++register(weight-normal, $weight-normal, true)
++register(weight-medium, $weight-medium, true)
++register(weight-semibold, $weight-semibold, true)
++register(weight-bold, $weight-bold, true)
 
 // Spacing
 
 $block-spacing: 1.5rem !default
 
-+register(block-spacing, $block-spacing)
++register(block-spacing, $block-spacing, true)
 
 // Responsiveness
 // Calc and variables for media queries are supported only since 2018 so don't use variables yet
@@ -123,9 +123,9 @@ $radius-large: 6px !default
 $radius-rounded: 290486px !default
 $speed: 86ms !default
 
-+register(easing, $easing)
-+register(radius-small, $radius-small)
-+register(radius, $radius)
-+register(radius-large, $radius-large)
-+register(radius-rounded, $radius-rounded)
-+register(speed, $speed)
++register(easing, $easing, true)
++register(radius-small, $radius-small, true)
++register(radius, $radius, true)
++register(radius-large, $radius-large, true)
++register(radius-rounded, $radius-rounded, true)
++register(speed, $speed, true)
