--- a/sass/components/menu.sass
+++ b/sass/components/menu.sass
@@ -16,21 +16,21 @@ $menu-label-font-size: 0.75em !default
 $menu-label-letter-spacing: 0.1em !default
 $menu-label-spacing: 1em !default
 
-+register(menu-list-line-height,$menu-list-line-height)
-+register(menu-item-radius,$menu-item-radius)
-+register(menu-item-color,$menu-item-color)
-+register(menu-list-link-padding,$menu-list-link-padding)
-+register(menu-item-hover-background-color,$menu-item-hover-background-color)
-+register(menu-item-hover-color,$menu-item-hover-color)
-+register(menu-item-active-background-color,$menu-item-active-background-color)
-+register(menu-item-active-color,$menu-item-active-color)
-+register(menu-list-border-left,$menu-list-border-left)
-+register(menu-nested-list-margin,$menu-nested-list-margin)
-+register(menu-nested-list-padding-left,$menu-nested-list-padding-left)
-+register(menu-label-color,$menu-label-color)
-+register(menu-label-font-size,$menu-label-font-size)
-+register(menu-label-letter-spacing,$menu-label-letter-spacing)
-+register(menu-label-spacing,$menu-label-spacing)
++register(menu-list-line-height,$menu-list-line-height, true)
++register(menu-item-radius,$menu-item-radius, true)
++register(menu-item-color,$menu-item-color, true)
++register(menu-list-link-padding,$menu-list-link-padding, true)
++register(menu-item-hover-background-color,$menu-item-hover-background-color, true)
++register(menu-item-hover-color,$menu-item-hover-color, true)
++register(menu-item-active-background-color,$menu-item-active-background-color, true)
++register(menu-item-active-color,$menu-item-active-color, true)
++register(menu-list-border-left,$menu-list-border-left, true)
++register(menu-nested-list-margin,$menu-nested-list-margin, true)
++register(menu-nested-list-padding-left,$menu-nested-list-padding-left, true)
++register(menu-label-color,$menu-label-color, true)
++register(menu-label-font-size,$menu-label-font-size, true)
++register(menu-label-letter-spacing,$menu-label-letter-spacing, true)
++register(menu-label-spacing,$menu-label-spacing, true)
 
 .menu
   font-size: v("size-normal")
