--- a/sass/components/pagination.sass
+++ b/sass/components/pagination.sass
@@ -30,25 +30,25 @@ $pagination-ellipsis-color: v("grey-light") !default
 $pagination-shadow-inset: inset 0 1px 2px vAlphaChange("scheme-invert", 0.2)
 
 
-+register(pagination-margin,$pagination-margin)
-+register(pagination-item-font-size,$pagination-item-font-size)
-+register(pagination-item-margin,$pagination-item-margin)
-+register(pagination-item-padding-left,$pagination-item-padding-left)
-+register(pagination-item-padding-right,$pagination-item-padding-right)
-+register(pagination-border-color,$pagination-border-color)
-+register(pagination-color,$pagination-color)
-+register(pagination-min-width,$pagination-min-width)
-+register(pagination-hover-border-color,$pagination-hover-border-color)
-+register(pagination-hover-color,$pagination-hover-color)
-+register(pagination-focus-border-color,$pagination-focus-border-color)
-+register(pagination-shadow-inset,$pagination-shadow-inset)
-+register(pagination-disabled-background-color,$pagination-disabled-background-color)
-+register(pagination-disabled-border-color,$pagination-disabled-border-color)
-+register(pagination-disabled-color,$pagination-disabled-color)
-+register(pagination-current-background-color,$pagination-current-background-color)
-+register(pagination-current-border-color,$pagination-current-border-color)
-+register(pagination-current-color,$pagination-current-color)
-+register(pagination-ellipsis-color,$pagination-ellipsis-color)
++register(pagination-margin,$pagination-margin, true)
++register(pagination-item-font-size,$pagination-item-font-size, true)
++register(pagination-item-margin,$pagination-item-margin, true)
++register(pagination-item-padding-left,$pagination-item-padding-left, true)
++register(pagination-item-padding-right,$pagination-item-padding-right, true)
++register(pagination-border-color,$pagination-border-color, true)
++register(pagination-color,$pagination-color, true)
++register(pagination-min-width,$pagination-min-width, true)
++register(pagination-hover-border-color,$pagination-hover-border-color, true)
++register(pagination-hover-color,$pagination-hover-color, true)
++register(pagination-focus-border-color,$pagination-focus-border-color, true)
++register(pagination-shadow-inset,$pagination-shadow-inset, true)
++register(pagination-disabled-background-color,$pagination-disabled-background-color, true)
++register(pagination-disabled-border-color,$pagination-disabled-border-color, true)
++register(pagination-disabled-color,$pagination-disabled-color, true)
++register(pagination-current-background-color,$pagination-current-background-color, true)
++register(pagination-current-border-color,$pagination-current-border-color, true)
++register(pagination-current-color,$pagination-current-color, true)
++register(pagination-ellipsis-color,$pagination-ellipsis-color, true)
 
 .pagination
   @extend %block
