--- a/sass/elements/box.sass
+++ b/sass/elements/box.sass
@@ -7,13 +7,13 @@ $box-padding: 1.25rem !default
 $box-link-hover-shadow: 0 0.5em 1em -0.125em vAlphaChange("scheme-invert", 0.1), 0 0 0 1px v("link") !default
 $box-link-active-shadow: inset 0 1px 2px vAlphaChange("scheme-invert", 0.2), 0 0 0 1px v("link") !default
 
-+register(box-background-color,$box-background-color)
-+register(box-radius,$box-radius)
-+register(box-shadow,$box-shadow)
-+register(box-color,$box-color)
-+register(box-padding,$box-padding)
-+register(box-link-hover-shadow,$box-link-hover-shadow)
-+register(box-link-active-shadow,$box-link-active-shadow)
++register(box-background-color,$box-background-color, true)
++register(box-radius,$box-radius, true)
++register(box-shadow,$box-shadow, true)
++register(box-color,$box-color, true)
++register(box-padding,$box-padding, true)
++register(box-link-hover-shadow,$box-link-hover-shadow, true)
++register(box-link-active-shadow,$box-link-active-shadow, true)
 
 .box
   @extend %block
