--- a/sass/utilities/derived-variables.sass
+++ b/sass/utilities/derived-variables.sass
@@ -1,23 +1,23 @@
 $primary: v("turquoise") !default
 
-+register(primary, $primary)
++register(primary, $primary, true)
 
 $info: v("cyan") !default
 $success: v("green") !default
 $warning: v("yellow") !default
 $danger: v("red") !default
 
-+register(info, $info)
-+register(success, $success)
-+register(warning, $warning)
-+register(danger, $danger)
++register(info, $info, true)
++register(success, $success, true)
++register(warning, $warning, true)
++register(danger, $danger, true)
 
 $light: v("white-ter") !default
 $dark: v("grey-darker") !default
 
 
-+register("light", $light)
-+register("dark", $dark)
++register("light", $light, true)
++register("dark", $dark, true)
 
 // Invert colors
 
@@ -30,14 +30,14 @@ $blue-invert: findColorInvert("blue") !default
 $purple-invert: findColorInvert("purple") !default
 $red-invert: findColorInvert("red") !default
 
-+register("orange-invert", $orange-invert)
-+register("yellow-invert", $yellow-invert)
-+register("green-invert", $green-invert)
-+register("turquoise-invert", $turquoise-invert)
-+register("cyan-invert", $cyan-invert)
-+register("blue-invert", $blue-invert)
-+register("purple-invert", $purple-invert)
-+register("red-invert", $red-invert)
++register("orange-invert", $orange-invert, true)
++register("yellow-invert", $yellow-invert, true)
++register("green-invert", $green-invert, true)
++register("turquoise-invert", $turquoise-invert, true)
++register("cyan-invert", $cyan-invert, true)
++register("blue-invert", $blue-invert, true)
++register("purple-invert", $purple-invert, true)
++register("red-invert", $red-invert, true)
 
 $primary-invert: findColorInvert("primary") !default
 $primary-light: findLightColor("primary") !default
@@ -58,31 +58,31 @@ $light-invert: findColorInvert("light") !default
 $dark-invert: findColorInvert("dark") !default
 
 
-+register(white-invert, $black)
-+register(black-invert, $white)
++register(white-invert, $black, true)
++register(black-invert, $white, true)
 
-+register(primary-invert, $primary-invert)
-+register(primary-light, $primary-light)
-+register(primary-dark, $primary-dark)
++register(primary-invert, $primary-invert, true)
++register(primary-light, $primary-light, true)
++register(primary-dark, $primary-dark, true)
 
-+register(info-invert, $info-invert)
-+register(info-light, $info-light)
-+register(info-dark, $info-dark)
++register(info-invert, $info-invert, true)
++register(info-light, $info-light, true)
++register(info-dark, $info-dark, true)
 
-+register(success-invert, $success-invert)
-+register(success-light, $success-light)
-+register(success-dark, $success-dark)
++register(success-invert, $success-invert, true)
++register(success-light, $success-light, true)
++register(success-dark, $success-dark, true)
 
-+register(warning-invert, $warning-invert)
-+register(warning-light, $warning-light)
-+register(warning-dark, $warning-dark)
++register(warning-invert, $warning-invert, true)
++register(warning-light, $warning-light, true)
++register(warning-dark, $warning-dark, true)
 
-+register(danger-invert, $danger-invert)
-+register(danger-light, $danger-light)
-+register(danger-dark, $danger-dark)
++register(danger-invert, $danger-invert, true)
++register(danger-light, $danger-light, true)
++register(danger-dark, $danger-dark, true)
 
-+register(light-invert, $light-invert)
-+register(dark-invert, $dark-invert)
++register(light-invert, $light-invert, true)
++register(dark-invert, $dark-invert, true)
 
 // General colors
 
@@ -94,40 +94,40 @@ $scheme-invert-bis: v("black-bis") !default
 $scheme-invert-ter: v("black-ter") !default
 
 
-+register(scheme-main, $scheme-main)
-+register(scheme-main-bis, $scheme-main-bis)
-+register(scheme-main-ter, $scheme-main-ter)
-+register(scheme-invert, $scheme-invert)
-+register(scheme-invert-bis, $scheme-invert-bis)
-+register(scheme-invert-ter, $scheme-invert-ter)
++register(scheme-main, $scheme-main, true)
++register(scheme-main-bis, $scheme-main-bis, true)
++register(scheme-main-ter, $scheme-main-ter, true)
++register(scheme-invert, $scheme-invert, true)
++register(scheme-invert-bis, $scheme-invert-bis, true)
++register(scheme-invert-ter, $scheme-invert-ter, true)
 
 $background: v("white-ter") !default
 
-+register("background", $background)
++register("background", $background, true)
 
 $border: v("grey-lighter") !default
 $border-hover: v("grey-light") !default
 $border-light: v("grey-lightest") !default
 $border-light-hover: v("grey-light") !default
 
-+register("border", $border)
-+register(border-hover, $border-hover)
-+register(border-light, $border-light)
-+register(border-light-hover, $border-light-hover)
++register("border", $border, true)
++register(border-hover, $border-hover, true)
++register(border-light, $border-light, true)
++register(border-light-hover, $border-light-hover, true)
 
 
 // Text colors
 
 $text: v("grey-dark") !default
-+register("text", $text)
++register("text", $text, true)
 
 $text-invert: findColorInvert("text") !default
 $text-light: v("grey") !default
 $text-strong: v("grey-darker") !default
 
-+register(text-invert, $text-invert)
-+register(text-light, $text-light)
-+register(text-strong, $text-strong)
++register(text-invert, $text-invert, true)
++register(text-light, $text-light, true)
++register(text-strong, $text-strong, true)
 
 // Code colors
 
@@ -137,27 +137,27 @@ $code-background: v("background") !default
 $pre: v("text") !default
 $pre-background: v("background") !default
 
-+register("code", $code)
-+register("code-background", $code-background)
++register("code", $code, true)
++register("code-background", $code-background, true)
 
-+register("pre", $pre)
-+register("pre-background", $pre-background)
++register("pre", $pre, true)
++register("pre-background", $pre-background, true)
 
 // Link colors
 
 $link: v("blue") !default
 
-+register(link, $link)
++register(link, $link, true)
 
 $link-invert: findColorInvert("link") !default
 $link-light: findLightColor("link") !default
 $link-dark: findDarkColor("link") !default
 $link-visited: v("purple") !default
 
-+register(link-invert, $link-invert)
-+register(link-light, $link-light)
-+register(link-dark, $link-dark)
-+register(link-visited, $link-visited)
++register(link-invert, $link-invert, true)
++register(link-light, $link-light, true)
++register(link-dark, $link-dark, true)
++register(link-visited, $link-visited, true)
 
 $link-hover: v("grey-darker") !default
 $link-hover-border: v("grey-light") !default
@@ -168,12 +168,12 @@ $link-focus-border: v("blue") !default
 $link-active: v("grey-darker") !default
 $link-active-border: v("grey-dark") !default
 
-+register(link-hover, $link-hover)
-+register(link-hover-border, $link-hover-border)
-+register(link-focus, $link-focus)
-+register(link-focus-border, $link-focus-border)
-+register(link-active, $link-active)
-+register(link-active-border, $link-active-border)
++register(link-hover, $link-hover, true)
++register(link-hover-border, $link-hover-border, true)
++register(link-focus, $link-focus, true)
++register(link-focus-border, $link-focus-border, true)
++register(link-active, $link-active, true)
++register(link-active-border, $link-active-border, true)
 
 
 // Typography
@@ -182,19 +182,19 @@ $family-primary: v("family-sans-serif") !default
 $family-secondary: v("family-sans-serif") !default
 $family-code: v("family-monospace") !default
 
-+register(family-primary, $family-primary)
-+register(family-secondary, $family-secondary)
-+register(family-code, $family-code)
++register(family-primary, $family-primary, true)
++register(family-secondary, $family-secondary, true)
++register(family-code, $family-code, true)
 
 $size-small: v("size-7") !default
 $size-normal: v("size-6") !default
 $size-medium: v("size-5") !default
 $size-large: v("size-4") !default
 
-+register(size-small, $size-small)
-+register(size-normal, $size-normal)
-+register(size-medium, $size-medium)
-+register(size-large, $size-large)
++register(size-small, $size-small, true)
++register(size-normal, $size-normal, true)
++register(size-medium, $size-medium, true)
++register(size-large, $size-large, true)
 
 // Lists and maps
 $custom-colors-list: null !default
@@ -221,3 +221,7 @@ $shades: ("black-bis", "black-ter", "grey-darker", "grey-dark", "grey", "grey-li
 
 $sizes: v("size-1") v("size-2") v("size-3") v("size-4") v("size-5") v("size-6") v("size-7") !default
 
+
+@if $css_vars and $shorten
+  @each $var in $css_vars
+    $_: shorten-var($var) //Register in short map
