--- a/sass/utilities/mixins.sass
+++ b/sass/utilities/mixins.sass
@@ -303,14 +303,17 @@
   #{varName($var)}: #{$value}
 
 =theme($name)
+  @if function-exists("_theme")
+    $name: _theme($name)
+
   @if $name == "default"
-    .theme, :root
+    [data-theme], :root
       @each $name in $bulma_used_vars
         @if isThemeable($name)
           +defineVariable($name, map_get($bulma_registered_vars, $name))
   @else
     $registered: $bulma_registered_vars
-    $selector: unquote(".theme.#{$name}")
+    $selector: unquote("[data-theme=#{$name}]")
 
     @at-root #{$selector}
       @content
